tests/baselines/reference/importTypeLocalMissing.errors.txt
tests/cases/conformance/types/import/usage.ts(1,24): error TS2307: Cannot find module './fo' or its corresponding type declarations.
tests/cases/conformance/types/import/usage.ts(2,22): error TS2307: Cannot find module './fo2' or its corresponding type declarations.
tests/cases/conformance/types/import/usage.ts(3,36): error TS2694: Namespace '"tests/cases/conformance/types/import/foo2".Bar' has no exported member 'Q'.
tests/cases/conformance/types/import/usage.ts(10,32): error TS2307: Cannot find module './fo2' or its corresponding type declarations.


==== tests/cases/conformance/types/import/foo.ts (0 errors) ====
    interface Point {
        x: number;
        y: number;
    }
    export = Point;
    
==== tests/cases/conformance/types/import/foo2.ts (0 errors) ====
    namespace Bar {
        export interface I {
            a: string;
            b: number;
        }
    }
    
    export namespace Baz {
        export interface J {
            a: number;
            b: string;
        }
    }
    
    class Bar {
        item: Bar.I;
        constructor(input: Baz.J) {}
    }
    export { Bar }
    
==== tests/cases/conformance/types/import/usage.ts (4 errors) ====
    export const x: import("./fo") = { x: 0, y: 0 };
                           ~~~~~~
!!! error TS2307: Cannot find module './fo' or its corresponding type declarations.
    export let y: import("./fo2").Bar.I = { a: "", b: 0 };
                         ~~~~~~~
!!! error TS2307: Cannot find module './fo2' or its corresponding type declarations.
    export let z: import("./foo2").Bar.Q = { a: "", b: 0 };
                                       ~
!!! error TS2694: Namespace '"tests/cases/conformance/types/import/foo2".Bar' has no exported member 'Q'.
    
    export class Bar2 {
        item: {a: string, b: number, c: object};
        constructor(input?: any) {}
    }
    
    export let shim: typeof import("./fo2") = {
                                   ~~~~~~~
!!! error TS2307: Cannot find module './fo2' or its corresponding type declarations.
        Bar: Bar2
    };
    